--- a/dolphinscheduler-server/src/main/resources/worker.properties
+++ b/dolphinscheduler-server/src/main/resources/worker.properties
@@ -34,7 +34,7 @@
 #worker.groups=default
 
 # default worker weight
-#worker.weight=100
+#work.weight=100
 
 # alert server listener host
 alert.listen.host=localhost
